# pyspark-sql-builder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO_FUNCTIONS.md  pyproject.toml
src/pyspark_sql_builder/: __init__.py  catalog.py  column.py  dataframe.py  drivers.py  functions.py  group.py  readwriter.py  session.py  types.py  window.py
src/pyspark_sql_builder/pyspark/: __init__.py
test/: AGENTS.md
test/integration/: AGENTS.md  conftest.py  test_advanced.py  test_auto_skip.py  test_catalog.py  test_collect.py  test_integration.py  test_writer.py
test/integration/assets/: duckdb.sql  sqlite.sql
test/integration/sqlite/: conftest.py  test_sqlite_integration.py
test/unit/: conftest.py  test_column.py  test_dataframe.py  test_functions.py  test_session.py  test_types.py
test/unit/column/: test_alias.py  test_arithmetic.py  test_asc_desc.py  test_between.py  test_cast.py  test_comparison.py  test_is_null.py  test_like.py  test_logical.py  test_name.py  test_substr.py  test_when_otherwise.py  test_window.py
test/unit/dataframe/: test_aggregate.py  test_alias.py  test_copy.py  test_distinct.py  test_drop.py  test_filter.py  test_group_by.py  test_join.py  test_limit.py  test_order_by.py  test_pipeline.py  test_select.py  test_show.py  test_transpile.py  test_union.py  test_where.py  test_with_column.py  test_with_column_renamed.py
test/unit/functions/: test__to_col.py  test_abs.py  test_acos.py  test_acosh.py  test_add_months.py  test_aes_decrypt.py  test_aes_encrypt.py  test_aggregate.py  test_alias.py  test_any_value.py  test_array.py  (+458 more)
(+23 files in other folders)
